--- a/idealize-impressoes/css/style.css
+++ b/idealize-impressoes/css/style.css
@@ -634,7 +634,7 @@ section {
     top: 99%;
     left: 0;
     right: 0;
-    background: var();
+    background: var(--white);
     border-top: var(--border);
     border-bottom: var(--border);
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
